# IFC2JSON_python

./: pyproject.toml
file_converters/: ifc2json.py  json2ifc.py
